
0.0.1: Sun Feb 21 2010
   - got the account manager working, technically last night, but this file
     wasn't available until this morning.
   - taught the edit account card to not check logins when the
     user/pass don't change.