@@ -1,0 +1,15 @@
+<div id="hmct-main" class="hmct-main">
+    <div class="palm-page-header multi-line">
+		<div class="palm-page-header-wrapper">
+	        <div class="icon hmct"></div>
+	        <div class="title">
+				Hiveminder Cloud Tasks
+	        </div>
+	    </div>
+    </div>
+
+    <br/>
+
+    <div id="hm_task_list" x-mojo-element="List"></div>
+
+</div>
