@@ -1,7 +1,9 @@
 
-/* {{{ /**/ function TaskManager() {
+function TaskManager() {
     Mojo.Log.info("TaskManager()");
+
+    Mojo.Log.info("test-md5: %s, %s", hex_md5(""), hex_md5("abc"));
 
 }
 
-/*}}}*/
+Mojo.Log.info('loaded(TaskManager.js)');
