@@ -4,3 +4,4 @@
      wasn't available until this morning.
    - taught the edit account card to not check logins when the
      user/pass don't change.
+   - moved various things around, getting ready to list tasks
